<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >	
   
            <TableRow 
                android:id="@+id/from_date_row"
                android:padding="10dp">
                <TextView 
                    android:layout_weight="1"
			        android:text="@string/from_date_text" />
                <TextView 
                    android:layout_weight="2"
			        android:id="@+id/fromdate"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" 
			        android:text="@string/default_from_date" />
 			 </TableRow>
             <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
             
            <TableRow 
                android:id="@+id/over_date_row"
                android:padding="10dp">
                <TextView 
                    android:layout_weight="1"
			        android:text="@string/over_date_text" />
                <TextView 
                    android:layout_weight="2"
			        android:id="@+id/overdate"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" 
			        android:text="@string/default_over_date" />
 			 </TableRow>
             <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
       
             
             <TableRow 
                android:id="@+id/projectname_row"
                android:padding="10dp">
                <TextView 
                    android:layout_weight="1"
			        android:text="@string/projectname_text" />
                <EditText
                    android:layout_weight="2"
                    android:maxLength="20"
			        android:id="@+id/projectname"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/projectname_hint">
			    </EditText>
 			 </TableRow>
             <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
             
             
            <TableRow 
                android:id="@+id/title_row"
                android:padding="10dp">
                <TextView 
                    android:layout_weight="1"
			        android:text="@string/title_text" />
                <EditText
                    android:layout_weight="2"
			        android:id="@+id/title"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/title_hint">
			    </EditText>
 			 </TableRow>
             <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
             
             <TableRow 
                android:id="@+id/project_describtion_row"
                android:padding="10dp">
                <TextView 
                    android:layout_weight="1"
			        android:text="@string/project_describtion_text" />
                <EditText
                    android:layout_weight="2"
			        android:id="@+id/project_describtion"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/project_describtion_hint"
			        android:gravity="top|left"
	                android:inputType="textMultiLine"
	                android:lines="3"
	                android:maxLength="250">
			    </EditText>
                
 			 </TableRow>
             <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
             
             
         <TableRow 
            android:id="@+id/duty_row"
            android:padding="10dp">
            <TextView 
                android:layout_weight="1"
       			android:text="@string/duty_text" />
            <EditText
	            android:layout_weight="2"
			    android:id="@+id/duty"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/duty_hint"
			    android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="250">
  			 </EditText>
 		</TableRow>
        <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
            
               
</TableLayout> 
