<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent" >	
  
           <TableRow 
               android:id="@+id/from_date_row"
               android:padding="10dp">
               <TextView 
                   android:layout_weight="1"
		        android:text="@string/from_date_text" />
               <TextView 
                   android:layout_weight="2"
		        android:id="@+id/from_date"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:text="@string/default_from_date" />
			 </TableRow>
            <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
            
           <TableRow 
               android:id="@+id/over_date_row"
               android:padding="10dp">
               <TextView 
                   android:layout_weight="1"
		        android:text="@string/over_date_text" />
               <TextView 
                   android:layout_weight="2"
		        android:id="@+id/over_date"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:text="@string/default_over_date" />
			 </TableRow>
            <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
      
            
            <TableRow 
               android:id="@+id/school_row"
               android:padding="10dp">
               <TextView 
                   android:layout_weight="1"
		        android:text="@string/school_text" />
               <EditText
                   android:layout_weight="2"
		        android:id="@+id/school"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:maxLength="15"
		        android:hint="@string/school_hint">
		    </EditText>
			 </TableRow>
            <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
            
            
            
            <TableRow 
               android:id="@+id/degree_row"
               android:padding="10dp">
               <TextView 
                   android:layout_weight="1"
		        android:text="@string/degree_text" />
               <Spinner
                   android:id="@+id/degree"
                   android:layout_weight="2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" 
                   android:prompt="@string/degree_prompt"/>
               
			 </TableRow>
            <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
            
            
            <TableRow 
               android:id="@+id/major_row"
               android:padding="10dp">
               <TextView 
                   android:layout_weight="1"
		        android:text="@string/major_text" />
               <EditText
                   android:layout_weight="2"
		        android:id="@+id/major"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:maxLength="15"
		        android:hint="@string/major_hint">
		    </EditText>
			 </TableRow>
            <View android:layout_height="1dip" android:background="@android:color/darker_gray" />
            
            
      </TableLayout> 
