<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<RadioGroup
	      android:id="@+id/genderGroup" 
	      android:contentDescription="@string/gender" 
	      android:layout_width="wrap_content" 
	      android:layout_height="wrap_content" 
	      android:orientation="vertical">

                <RadioButton 
                    android:padding="25dp"
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/radioMale" 
				    android:text="@string/male" 
				    android:checked="true">
				</RadioButton>
 

                <RadioButton
                    android:padding="25dp"
				    android:id="@+id/radioFemale"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/female" />
   			 </RadioGroup>
</LinearLayout>
		
