<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="20dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="false" >

            <TextView
                android:id="@+id/province_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province_text" >
            </TextView>

            <Spinner
                android:id="@+id/province_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="false" >

            <TextView
                android:id="@+id/city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_text" >
            </TextView>

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="false" >

            <TextView
                android:id="@+id/county_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/county_text" >
            </TextView>

            <Spinner
                android:id="@+id/county_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

    </TableLayout>